--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ name = "cargo-rank"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
+ohno = { version = "0.2.1", default-features = false, features = ["app-err"] }
 bytes = { version = "1.0", default-features = false }
 camino = { version = "1.2.1", default-features = false }
 cargo_metadata = { version = "0.23.1", default-features = false }
@@ -77,7 +77,7 @@ zstd = { version = "0.13", default-features = false }
 windows = { version = "0.61", default-features = false, features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_Ioctl", "Win32_Security"] }
 
 [build-dependencies]
-anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
+ohno = { version = "0.2", default-features = false, features = ["app-err"] }
 camino = { version = "1.2.1", default-features = false }
 clap = { version = "4.5.49", default-features = false, features = ["std", "derive"] }
 palette = { version = "0.7.6", default-features = true, features = ["serializing"] }
