More bug fixes.
- Fix --dependency-types support to only apply to the first
level of dependencies, after which they revert to normal
dependencies.

- Fix a few cases where the handling of CWD vs. normal Cargo semantics
didn't agree. Now it's all consistent

- Fix a few encoding issues in the generated reports.

- Fix more temp dir issues in tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,7 +115,8 @@ mmap-rs = { version = "0.7.0", default-features = false }
 ohno = { version = "0.3.0", default-features = false, features = ["app-err"] }
 owo-colors = { version = "4.1", default-features = false }
 pastey = { version = "0.2.1", default-features = false }
-ra_ap_syntax = { version = "0.0.318", default-features = false }
+percent-encoding = { version = "2.3", default-features = false, features = ["alloc"] }
+ra_ap_syntax = { version = "0.0.319", default-features = false }
 regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
 reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "stream"] }
 rust_xlsxwriter = { version = "0.93.0", default-features = false, features = ["zlib"] }
