--- a/cargo-aprz-lib/tests/fixtures/tiny-crate/Cargo.toml
+++ b/cargo-aprz-lib/tests/fixtures/tiny-crate/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2024"
 
 [workspace]
 
+[features]
+default = ["extra"]
+extra = ["dep:once_cell"]
+
 [dependencies]
 itoa = "1"
 miniz_oxide = "0.8"
+once_cell = { version = "1", optional = true }
