--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: release
     steps:
-      - uses: actions/checkout@v6
-      - uses: taiki-e/create-gh-release-action@v1
+      - uses: actions/checkout@v6.0.2
+      - uses: taiki-e/create-gh-release-action@v1.9.2
         with:
           changelog: CHANGELOG.md
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -39,8 +39,8 @@ jobs:
             target: aarch64-pc-windows-msvc
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v6
-      - uses: taiki-e/upload-rust-binary-action@v1
+      - uses: actions/checkout@v6.0.2
+      - uses: taiki-e/upload-rust-binary-action@v1.27.0
         with:
           bin: cargo-aprz
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -48,13 +48,13 @@ jobs:
 
   publish-crate:
     runs-on: ubuntu-latest
-    needs: [create-release]
+    needs: [upload-assets]
     permissions:
       id-token: write
     steps:
-      - uses: actions/checkout@v6
-      - uses: rust-lang/crates-io-auth-action@v1
+      - uses: actions/checkout@v6.0.2
+      - uses: rust-lang/crates-io-auth-action@v1.0.3
         id: auth
-      - run: cargo publish
+      - run: cargo publish --locked
         env:
           CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
