high risk criteria evaluation flipped, much better html renderer with navigatable crate links

--- a/cargo-aprz-lib/default_config.toml
+++ b/cargo-aprz-lib/default_config.toml
@@ -50,75 +50,103 @@ advisories_cache_ttl = "1 week"
 # ----------------------------------------------------------------------------
 # Expressions
 #
-# Weight rationale (total = 100 points):
+# Weight rationale (total = 109 points):
 #
 #   Category                    Points   %   Why
 #   ─────────────────────────── ──────  ───  ────────────────────────────────
-#   Code Quality & Safety         22    22%  Highest: CI, linting, coverage,
+#   Code Quality & Safety         26    24%  Highest: CI, linting, coverage,
 #                                             and unsafe directly affect the
 #                                             reliability of code you import.
-#   Crate Maturity                15    15%  Age and version stability are
-#                                             strong predictors of reliability.
-#   Community & Development       13    13%  Contributors + commits show
+#   Community & Development       13    12%  Contributors + commits show
 #                                             project health and sustainability.
-#   Release Activity              12    12%  Active releases signal the crate
+#   Release Activity              12    11%  Active releases signal the crate
 #                                             isn't abandoned; intentional
 #                                             quality checkpoints.
-#   Ownership & Governance        10    10%  Bus-factor risk. Directly impacts
-#                                             long-term maintainability.
-#   Security (non-critical)        8     8%  Medium/low vulns checked here;
+#   Crate Maturity                11    10%  Age and version stability.
+#   Security (non-critical)       11    10%  Medium/low vulns checked here;
 #                                             critical/high are instant high-risk.
-#   Documentation                  8     8%  Good docs reduce integration risk
+#   Usage & Popularity            10     9%  Downloads signal real-world vetting.
+#                                             High adoption = extensive vetting.
+#   Issue & PR Responsiveness     10     9%  Maintainer engagement signal;
+#                                             how quickly issues/PRs are addressed.
+#   Ownership & Governance         9     8%  Bus-factor risk. Having multiple
+#                                             owners ensures continuity.
+#   Documentation                  7     6%  Good docs reduce integration risk
 #                                             and onboarding cost.
-#   Usage & Popularity             7     7%  Downloads signal real-world vetting,
-#                                             but popularity ≠ quality.
-#   Issue & PR Responsiveness      5     5%  Maintainer engagement signal, but
-#                                             many healthy crates have few issues.
-#
-# Key relative comparisons:
-#   - CI (7) > Doc coverage (4): CI catches regressions continuously
-#   - Ownership (10) > Contributors (3+2): accountability > crowd size
-#   - Test coverage (6+4) > Unsafe (3+2): coverage proves behavior
-#   - Release last year (7) > last 6mo (5): some mature crates release slowly
-#   - Maturity 1yr (7) > 6mo (5): longer track record is proportionally better
-#   - Active commits >3 (5) > ≥1 (3): sustained activity > bare minimum
 # ----------------------------------------------------------------------------
 
 # ============================================================================
 # HIGH RISK CHECKS
-# Any expression evaluating to true immediately flags the crate as high risk.
-# These represent non-negotiable quality gates.
+# All expressions must evaluate to true. If any evaluates to false, the crate
+# is immediately flagged as high risk. These represent non-negotiable quality gates.
 # ============================================================================
 
-[[high_risk_if_any]]
-name = "Disallowed License"
-description = "Crate license is not in the allowed list (MIT, Apache-2.0, BSD-3-Clause, ISC, BSL-1.0, Zlib). Microsoft policy requires permissive licenses."
-expression = "!(crate.license.contains('MIT') || crate.license.contains('Apache-2.0') || crate.license.contains('BSD-3-Clause') || crate.license.contains('ISC') || crate.license.contains('BSL-1.0') || crate.license.contains('Zlib'))"
+[[high_risk]]
+name = "Allowed License"
+description = "Crate license is in the allowed list of OSI-approved permissive licenses."
+expression = """(
+    crate.license.contains('AFL-3.0') ||
+    crate.license.contains('Apache-2.0') ||
+    crate.license.contains('AAL') ||
+    crate.license.contains('BSD-2-Clause') ||
+    crate.license.contains('BSD-3-Clause') ||
+    crate.license.contains('BSL-1.0') ||
+    crate.license.contains('CATOSL-1.1') ||
+    crate.license.contains('EUDatagrid') ||
+    crate.license.contains('ECL-2.0') ||
+    crate.license.contains('EFL-2.0') ||
+    crate.license.contains('Entessa') ||
+    crate.license.contains('Fair') ||
+    crate.license.contains('HPND') ||
+    crate.license.contains('ISC') ||
+    crate.license.contains('MS-PL') ||
+    crate.license.contains('MIT') ||
+    crate.license.contains('MirOS') ||
+    crate.license.contains('Multics') ||
+    crate.license.contains('NTP') ||
+    crate.license.contains('Naumen') ||
+    crate.license.contains('OGTSL') ||
+    crate.license.contains('PHP-3.0') ||
+    crate.license.contains('CNRI-Python') ||
+    crate.license.contains('Python-2.0') ||
+    crate.license.contains('QPL-1.0') ||
+    crate.license.contains('NCSA') ||
+    crate.license.contains('VSL-1.0') ||
+    crate.license.contains('W3C') ||
+    crate.license.contains('Xnet') ||
+    crate.license.contains('ZPL-2.0') ||
+    crate.license.contains('Zlib') ||
+    crate.license.contains('Unicode-3.0') ||
+    crate.license.contains('CC0-1.0') ||
+    crate.license.contains('CDLA-Permissive-2.0') ||
+    crate.license.contains('0BSD') ||
+    crate.license.contains('Unlicense')
+)"""
 
-[[high_risk_if_any]]
-name = "Critical Security Vulnerability"
-description = "This crate version has critical severity vulnerabilities in the RustSec advisory database."
-expression = "advisories.version_critical_severity_vulnerabilities > 0"
+[[high_risk]]
+name = "No Critical Security Vulnerability"
+description = "This crate version has no critical severity vulnerabilities in the RustSec advisory database."
+expression = "advisories.version_critical_severity_vulnerabilities == 0"
 
-[[high_risk_if_any]]
-name = "High Security Vulnerability"
-description = "This crate version has high severity vulnerabilities in the RustSec advisory database."
-expression = "advisories.version_high_severity_vulnerabilities > 0"
+[[high_risk]]
+name = "No High Security Vulnerability"
+description = "This crate version has no high severity vulnerabilities in the RustSec advisory database."
+expression = "advisories.version_high_severity_vulnerabilities == 0"
 
-[[high_risk_if_any]]
-name = "Unmaintained Crate"
-description = "The crate is flagged as unmaintained in the RustSec advisory database."
-expression = "advisories.version_unmaintained_warnings > 0"
+[[high_risk]]
+name = "Maintained Crate"
+description = "The crate is not flagged as unmaintained in the RustSec advisory database."
+expression = "advisories.version_unmaintained_warnings == 0"
 
-[[high_risk_if_any]]
-name = "Unsound Crate"
-description = "The crate is flagged as unsound in the RustSec advisory database."
-expression = "advisories.version_unsound_warnings > 0"
+[[high_risk]]
+name = "Sound Crate"
+description = "The crate is not flagged as unsound in the RustSec advisory database."
+expression = "advisories.version_unsound_warnings == 0"
 
-[[high_risk_if_any]]
-name = "Yanked Version"
-description = "This crate version has been yanked from crates.io, typically indicating a serious defect."
-expression = "stability.yanked"
+[[high_risk]]
+name = "Not Yanked"
+description = "This crate version has not been yanked from crates.io."
+expression = "!stability.yanked"
 
 # ============================================================================
 # EVALUATION EXPRESSIONS
@@ -126,9 +154,11 @@ expression = "stability.yanked"
 # Total budget: 100 points across all expressions.
 # ============================================================================
 
-# --- Crate Maturity (15 points) ---
+# --- Crate Maturity (11 points) ---
 # Age and version stability are strong predictors of reliability. A crate that
 # has survived > 1 year and moved past 0.x has proven real-world survivability.
+# Stable Version is weighted low (1pt) because many Rust crates stay at 0.x by
+# convention while being stable in practice.
 
 [[eval]]
 name = "Crate Age >= 6 Months"
@@ -140,34 +170,45 @@ points = 5
 name = "Crate Age >= 1 Year"
 description = "The crate was first published at least 1 year ago, indicating established maturity."
 expression = "stability.crate_created_at < (now - duration('8760h'))"
-points = 7
+points = 5
 
 [[eval]]
 name = "Stable Version (>= 1.0.0)"
 description = "The crate version is 1.0.0 or higher, no longer in the 0.x.x experimental range."
 expression = "!crate.version.startsWith('0.')"
-points = 3
+points = 1
 
-# --- Usage & Popularity (7 points) ---
-# Downloads signal real-world vetting by many consumers, but popularity alone
-# does not guarantee quality, so this category gets moderate weight.
+# --- Usage & Popularity (10 points) ---
+# Downloads signal real-world vetting by many consumers. Points are distributed
+# across three tiers to reward incremental adoption levels.
 
 [[eval]]
-name = "Popular Crate (>= 5000 downloads in 90 days)"
+name = "Some Adoption (>= 1,000 downloads in 90 days)"
+description = "The crate has at least 1000 downloads in the last 90 days, indicating some real-world usage."
+expression = "usage.total_downloads_last_90_days >= 1000"
+points = 5
+
+[[eval]]
+name = "Popular Crate (>= 5,000 downloads in 90 days)"
 description = "The crate has at least 5000 downloads in the last 90 days, indicating meaningful adoption."
 expression = "usage.total_downloads_last_90_days >= 5000"
-points = 7
+points = 3
 
-# --- Ownership & Governance (10 points) ---
+[[eval]]
+name = "Highly Adopted Crate (>= 500,000 downloads in 90 days)"
+description = "Very high download count indicates extensive real-world vetting and ecosystem reliance."
+expression = "usage.total_downloads_last_90_days >= 500000"
+points = 2
+
+# --- Ownership & Governance (9 points) ---
 # Bus-factor risk: a single-owner crate is fragile. Having multiple owners or
-# a team ensures continuity. Worth more than community size because it directly
-# impacts who can publish fixes and new releases.
+# a team ensures continuity.
 
 [[eval]]
 name = "Multiple Owners"
 description = "The crate has at least 2 owners, reducing bus-factor risk."
 expression = "size(crate.owners) >= 2"
-points = 10
+points = 9
 
 # --- Release Activity (12 points) ---
 # Active releases are intentional quality checkpoints. A crate that hasn't
@@ -214,44 +255,43 @@ description = "At least 1 commit in the last 90 days shows the project is not do
 expression = "activity.commits_last_90_days >= 1"
 points = 3
 
-# --- Issue & PR Responsiveness (5 points) ---
+# --- Issue & PR Responsiveness (10 points) ---
 # Measures how quickly maintainers close issues and merge PRs. Important signal
-# of maintainer engagement, but lower weight because many healthy niche crates
-# have few issues/PRs. Uses "last 365 days" windowed metrics to focus on recent
-# behavior. Merged PR age = time from PR open to merge.
+# of maintainer engagement. Uses "last 365 days" windowed metrics to focus on
+# recent behavior. Merged PR age = time from PR open to merge.
 
 [[eval]]
 name = "Fast Issue Resolution (p50 < 30 days)"
 description = "Median age of issues closed in the last year is under 30 days."
 expression = "activity.closed_issue_age_last_365_days_p50 < 30"
-points = 1
+points = 2
 
 [[eval]]
 name = "Reasonable Issue Resolution (p75 < 180 days)"
 description = "75th percentile age of issues closed in the last year is under 180 days."
 expression = "activity.closed_issue_age_last_365_days_p75 < 180"
-points = 1
+points = 2
 
 [[eval]]
 name = "Fast PR Merge (p50 < 7 days)"
 description = "Median age of PRs merged in the last year is under 7 days."
 expression = "activity.merged_pr_age_last_365_days_p50 < 7"
-points = 1
+points = 2
 
 [[eval]]
 name = "Reasonable PR Merge (p75 < 15 days)"
 description = "75th percentile age of PRs merged in the last year is under 15 days."
 expression = "activity.merged_pr_age_last_365_days_p75 < 15"
-points = 1
+points = 2
 
 [[eval]]
 name = "Good PR Turnaround (p90 < 30 days)"
 description = "90th percentile age of PRs merged in the last year is under 30 days."
 expression = "activity.merged_pr_age_last_365_days_p90 < 30"
-points = 1
+points = 2
 
-# --- Documentation (8 points) ---
-# Good docs reduce integration risk and onboarding cost. API coverage (4pts)
+# --- Documentation (7 points) ---
+# Good docs reduce integration risk and onboarding cost. API coverage (3pts)
 # matters most since it directly helps consumers. Examples (2pts) and crate-level
 # docs (2pts) are supporting quality signals.
 
@@ -259,7 +299,7 @@ points = 1
 name = "Good Documentation Coverage (>= 90%)"
 description = "At least 90% of public API elements are documented."
 expression = "docs.public_api_coverage_percentage >= 90"
-points = 4
+points = 3
 
 [[eval]]
 name = "Has Examples"
@@ -325,13 +365,6 @@ description = "The crate has fewer than 10 unsafe blocks, limiting exposure to m
 expression = "trust.unsafe_blocks < 10"
 points = 2
 
-# Subtotal check: 7 + 3 + 1 + 6 + 4 + 3 + 2 = 26 potential, but max
-# achievable is 22 (No Unsafe + Low Unsafe can both be true = 5, or if
-# unsafe > 0 then only Low Unsafe = 2; coverage tiers overlap similarly).
-# Effective max when all pass: 7+3+1+6+4+3+2 = 26, but the score normalizes
-# to granted/total*100, so overlapping tiers are intentional to create a
-# gradient rather than cliff effects.
-
 # --- Security: Non-Critical Vulnerabilities (8 points) ---
 # Critical and high severity are handled by high_risk_if_any above. Here we
 # penalize medium and low severity vulnerabilities proportionally. Medium vulns
@@ -342,7 +375,7 @@ points = 2
 name = "No Medium Vulnerabilities"
 description = "No medium severity vulnerabilities in this crate version."
 expression = "advisories.version_medium_severity_vulnerabilities == 0"
-points = 5
+points = 8
 
 [[eval]]
 name = "No Low Vulnerabilities"
